# research_paper_on_physical_activity_in_fibromyalgia_patients

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
paper/report/: main.tex  references.bib
src/data/: README.md
src/results/: REVIEW.md
src/results/networks/: 05_mlvar_core_between_edges.csv  05_mlvar_core_contemporaneous_edges.csv  05_mlvar_core_subject_temporal_coefs.csv  05_mlvar_core_temporal_edges.csv  05_mlvar_movementonly_between_edges.csv  05_mlvar_movementonly_contemporaneous_edges.csv  05_mlvar_movementonly_subject_temporal_coefs.csv  05_mlvar_movementonly_temporal_edges.csv  06_sgimme_individual_path_estimates.csv  06_sgimme_summary_path_counts.csv  07_graphicalvar_edge_selection_freq.csv  07_graphicalvar_individual_edges.csv  07_perperson_var_ols_edges.csv  07_perperson_var_ols_wide.csv  91_core_edges_core4_vs_ext6.csv  cantmove_edge_comparison.csv  extended7_core_vs_full_compare.csv  extended7_mlvar_contemporaneous_edges.csv  extended7_mlvar_temporal_edges.csv  extended_core_vs_full_compare.csv  extended_mlvar_contemporaneous_edges.csv  extended_mlvar_temporal_edges.csv  robust_bootstrap_edges_long.csv  robust_bootstrap_summary.csv  robust_detrended_compare.csv  robust_detrended_temporal_edges.csv  robust_enmo_raw_temporal_edges.csv  robust_enmo_sqrt_temporal_edges.csv  robust_enmo_transform_compare.csv  robust_loo_edges_long.csv  robust_loo_summary.csv  robust_threshold40_compare.csv  robust_threshold40_temporal_edges.csv
src/results/tables/: 02_between_person_corr.csv  02_daytype_effects.csv  (+44 more)
(+211 files in other folders)
