[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibromyalgia-physical-activity-ema"
version = "0.1.0"
description = "Reproducible EMA analysis of determinants of physical activity in fibromyalgia"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Stijn Van Severen", email = "stijn.vanseveren@gmail.com" }
]
keywords = ["fibromyalgia", "physical activity", "EMA", "mlVAR", "network analysis"]
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyreadstat>=1.2",
  "python-docx>=1.1",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools]
packages = []
